[metadata]
name = bbrl
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = file: requirements.txt

[options.extras_require]  # in setup.cfg
test =
    pytest==4.4.1

[flake8]
per-file-ignores = __init__.py:F401
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, app/
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203
